# LiveDSP

./: .gitignore  CMakeLists.txt  LICENSE  README.md  THIRD-PARTY-NOTICES.md
.github/workflows/: build.yml
cmake/: BuildInstaller.cmake
ext/: README.md
favs/: holyshit  holyshit2  holyshit3
installer/: LiveDSP.iss
models/Mesa Dual Rectifier MW Red Modern - Mesa 4x12 - Full Rig/: FR OD808 MBDR MW Red Mdn - 1 - 4FB LR SM57a.nam
source/: AppPaths.h  MetronomeComponent.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  TunerComponent.h
source/dsp/: Autotune.h  CabConvolver.h  Equalizer.h  GranularPitchShifter.h  Metronome.h  NamProcessor.h  NoiseGate.h  Overdrive.h  PitchDetector.h  PitchShifter.h  Recorder.h  VocalChain.h  VoiceChain.h
source/ui/: AppView.h  GuitarLookAndFeel.h  GuitarView.cpp  GuitarView.h  LandingView.h  LiveLookAndFeel.h  Panels.h  SupportButton.h  VocalView.h  VoiceView.h
